added pics and some folders

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Lasagna Recipe</h1>
+    <img src="/recipes/Image/lasagna.jpeg" alt="A picture of lasagna">
 </body>
 </html>
