--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,33 @@
 <body>
     <h1>Lasagna Recipe</h1>
     <img src="/recipes/Image/lasagna.jpeg" alt="A picture of lasagna">
+    <h2>Description</h2>
+    <p>
+        Making homemade lasagna much easier than it looks. You'll find the full, step-by-step recipe below
+    </p>
+    <h2>Ingredients</h2>
+    <p>
+        <ul>
+            <li>½ pound ground pork</li>>
+            <li>½ pound lean ground beef</li>
+            <li>½ cup minced onion</li>
+            <li>1 (28 ounce) can crushed tomatoes</li>
+            <li>1 (8 ounce) can tomato sauce</li>
+            <li>2 tablespoons chopped fresh parsley, divided</li>
+            <li>1 clove garlic, crushed</li>
+            <li>1 ½ teaspoons dried basil</li>
+            <li>1 ½ teaspoons salt</li>
+            <li>½ teaspoon dried oregano</li>
+            <li>⅛ teaspoon white sugar</li>
+            <li>1 (16 ounce) package lasagna noodles</li>
+            <li>1 pound small-curd cottage cheese</li>
+            <li>¾ cup grated Parmesan cheese</li>
+            <li>3 large eggs</li>
+            <li>2 teaspoons salt</li>
+            <li>¼ teaspoon ground black pepper</li>
+            <li>1 (16 ounce) package shredded mozzarella cheese</li>
+        </ul>
+
+    </p>
 </body>
 </html>
