--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -15,7 +15,7 @@
     <h2>Ingredients</h2>
     <p>
         <ul>
-            <li>½ pound ground pork</li>>
+            <li>½ pound ground pork</li>
             <li>½ pound lean ground beef</li>
             <li>½ cup minced onion</li>
             <li>1 (28 ounce) can crushed tomatoes</li>
@@ -32,9 +32,19 @@
             <li>3 large eggs</li>
             <li>2 teaspoons salt</li>
             <li>¼ teaspoon ground black pepper</li>
-            <li>1 (16 ounce) package shredded mozzarella cheese</li>
+            <li>1 (1 ounce) package shredded mozzarella cheese</li>
         </ul>
-
+    <h2>Method</h2>
+        <ol>
+    <li>Combine pork and ground beef in a large, deep skillet over medium-high heat; cook and stir until browned and crumbly, 5 to 7 minutes. Add onion and cook until translucent, about 5 minutes.</li>
+    <li>Stir in crushed tomatoes, tomato sauce, 1 tablespoon fresh parsley, garlic, basil, salt, oregano, and sugar. Reduce heat to medium-low and simmer, stirring occasionally, for 30 minutes.</li>
+    <li>While the sauce is simmering, bring a large pot of lightly salted water to a boil. Cook lasagna noodles in the boiling water, stirring occasionally, until tender yet firm to the bite, 8 to 10 minutes. Drain and set aside.</li>
+    <li>While the noodles are cooking, preheat the oven to 375 degrees F (190 degrees C).</li>
+    <li>Mix cottage cheese, Parmesan cheese, eggs, remaining 1 tablespoon fresh parsley, salt, and pepper in a large bowl until combined.</li>
+    <li>Assemble lasagna: Spread a spoon or two of sauce over the bottom of a 9x13-inch baking dish just to to coat it. Place two layers of noodles over the sauce to cover. Layer with 1/2 of the cheese mixture, 1/2 of the remaining sauce, and 1/2 of the mozzarella cheese. Repeat layers once more using the remaining noodles, cheese mixture, sauce, and mozzarella. Cover the baking dish with aluminum foil.</li>
+    <li>Bake in the preheated oven for 30 to 40 minutes. Remove the foil and bake until cheese is golden brown, 5 to 10 more minutes.</li>
+    <li>Remove from the oven and let stand for 10 minutes before cutting and serving.</li>
+        </ol>
     </p>
 </body>
 </html>
